subiendo nuevos proyectos

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ManejoParametros/target/
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ManejoFormulariosHTML/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ManejoCabeceros/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ManejoCodigoEstado/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/CabecerosRespuesta/target/
