subiendo nuevos proyectos

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ManejoCabeceros/target/
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ManejoCodigoEstado/target/
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/CabecerosRespuesta/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ManejoCookies/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/CookiesContador/target/
