subiendo nuevos proyectos

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/CabecerosRespuesta/target/
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ManejoCookies/target/
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/CookiesContador/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/SesionesHttp/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/CarritoCompras/target/
