subiendo nuevos proyectos

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/CookiesContador/target/
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/SesionesHttp/target/
 /Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/CarritoCompras/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/HolaMundoJSP/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ExpresionesJSPs/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/ScriptletsJSPs/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/DeclaracionesJSPs/target/
+/Fundamentos Java, Variables, Operadores, Ciclos, Funciones, Arreglos - Netbeans/ServletsJSPs/DocumentosJSPx/target/
